--- a/exercise1-grade.yaml
+++ b/exercise1-grade.yaml
@@ -1,11 +1,15 @@
 - name: Grading the exercise1
   hosts: localhost
+  gather_facts: true
+
+  vars:
+    user: "{{ lookup('env', 'USER') }}"
 
   tasks:
     - name: Get Virtual Machine status
       kubernetes.core.k8s_info:
         kind: VirtualMachine
-        namespace: chiaretto-vms
+        namespace: "namespace-{{ user }}"
         name: exercise1
       register: exercise1_info
 
