--- a/admin-configure-environment.yaml
+++ b/admin-configure-environment.yaml
@@ -61,7 +61,7 @@
     - name: Grant cluster-admin role to users in their namespaces
       kubernetes.core.k8s:
         state: present
-        namespace: teste
+        namespace: "namespace-user{{ item }}"
         kind: RoleBinding
         api_version: rbac.authorization.k8s.io/v1
         name: user-cluster-admin-binding
