--- a/exercise2-clean.yaml
+++ b/exercise2-clean.yaml
@@ -6,42 +6,12 @@
     user: "{{ lookup('env', 'USER') }}"
 
   tasks:
-    - name: Removing exercise2 virtual machine
+    - name: Breaking the exercise2
       kubernetes.core.k8s:
         state: absent
-        template: "exercise2-vm.yaml.j2"
-      register: exercise2vm
-      until: exercise2vm is succeeded
+        template: "exercise2-fix-vm.yaml.j2"
+      register: breakvm
+      until: breakvm is succeeded
       retries: 60
       delay: 10
-      failed_when: exercise2vm is failed or exercise2vm.failed
-
-    - name: Removing exercise2 service
-      kubernetes.core.k8s:
-        state: absent
-        template: "exercise2-service.yaml.j2"
-      register: exercise2svc
-      until: exercise2svc is succeeded
-      retries: 60
-      delay: 10
-      failed_when: exercise2svc is failed or exercise2svc.failed
-
-    - name: Removing exercise2 route
-      kubernetes.core.k8s:
-        state: absent
-        template: "exercise2-break-route.yaml.j2"
-      register: exercise2route
-      until: exercise2route is succeeded
-      retries: 60
-      delay: 10
-      failed_when: exercise2route is failed or exercise2route.failed
-
-    - name: Removing curl image pod for tests
-      kubernetes.core.k8s:
-        state: absent
-        template: "curl-pod.yaml.j2"
-      register: exercise2curlpod
-      until: exercise2curlpod is succeeded
-      retries: 60
-      delay: 10
-      failed_when: exercise2curlpod is failed or exercise2curlpod.failed
+      failed_when: breakvm is failed or breakvm.failed
