--- a/exercise2-grade.yaml
+++ b/exercise2-grade.yaml
@@ -6,23 +6,19 @@
     user: "{{ lookup('env', 'USER') }}"
 
   tasks:
-    - name: Getting URL from route
+    - name: Get Virtual Machine status
       kubernetes.core.k8s_info:
-        kind: Route
+        kind: VirtualMachine
         namespace: "namespace-{{ user }}"
         name: exercise2
-      register: routefacts
+      register: exercise2_info
 
-    - name: Access the URL and check for the response
-      ansible.builtin.uri:
-        url: "https://{{ routefacts.resources[0].spec.host }}"
-        method: GET
-        return_content: true
-      register: urlcontent
+    - name: Check if VM is running
+      ansible.builtin.debug:
+        msg: "The Virtual Machine is running."
+      when: exercise2_info.resources[0].status.printableStatus == "Running"
 
-    - name: Assert that is in the response body expected
-      ansible.builtin.assert:
-        that:
-          - "'Hello from exercise2, you are doing a great job!' in urlcontent.content"
-        success_msg: "Good job, its working as expected!"
-        fail_msg: "Ops, something went wrong and you have to fix the exercise!"
+    - name: Check if VM is not running
+      ansible.builtin.debug:
+        msg: "The Virtual Machine is NOT running."
+      when: exercise2_info.resources[0].status.printableStatus != "Running"
