--- a/exercise3-break.yaml
+++ b/exercise3-break.yaml
@@ -1,18 +1,47 @@
-- name: Preparing exercise3
+- name: Preparing the exercise2
   hosts: localhost
-  gather_facts: no
+  gather_facts: true
 
   vars:
     user: "{{ lookup('env', 'USER') }}"
 
   tasks:
-        
-    - name: Creating VM exercise3
+    - name: Creating exercise2 virtual machine
       kubernetes.core.k8s:
         state: present
-        template: "exercise3-create-vm.yaml.j2"
-      register: createvm
-      until: createvm is succeeded
+        template: "exercise2-vm.yaml.j2"
+      register: exercise2vm
+      until: exercise2vm is succeeded
       retries: 60
       delay: 10
-      failed_when: createvm is failed or createvm.failed
+      failed_when: exercise2vm is failed or exercise2vm.failed
+
+    - name: Creating exercise2 service
+      kubernetes.core.k8s:
+        state: present
+        template: "exercise2-service.yaml.j2"
+      register: exercise2svc
+      until: exercise2svc is succeeded
+      retries: 60
+      delay: 10
+      failed_when: exercise2svc is failed or exercise2svc.failed
+
+    - name: Creating exercise2 route
+      kubernetes.core.k8s:
+        state: present
+        template: "exercise2-break-route.yaml.j2"
+      register: exercise2route
+      until: exercise2route is succeeded
+      retries: 60
+      delay: 10
+      failed_when: exercise2route is failed or exercise2route.failed
+
+    - name: Creating curl image pod for tests
+      kubernetes.core.k8s:
+        state: present
+        template: "curl-pod.yaml.j2"
+      register: exercise2curlpod
+      until: exercise2curlpod is succeeded
+      retries: 60
+      delay: 10
+      failed_when: exercise2curlpod is failed or exercise2curlpod.failed
