--- a/exercise4-fix.yaml
+++ b/exercise4-fix.yaml
@@ -8,7 +8,7 @@
   tasks:
     - name: Set VM to stopped state
       kubernetes.core.k8s:
-        namespace: "namespace-user1"
+        namespace: "namespace-{{ user }}"
         kind: VirtualMachine
         name: exercise4
         state: present
@@ -33,7 +33,7 @@
 
     - name: Set VM to start state
       kubernetes.core.k8s:
-        namespace: "namespace-user1"
+        namespace: "namespace-{{ user }}"
         kind: VirtualMachine
         name: exercise4
         state: present
