--- a/exercise6-grade.yaml
+++ b/exercise6-grade.yaml
@@ -10,6 +10,18 @@
     cloudinitdisk_to_check: "cloudinitdisk"
 
   tasks:
+    - block:
+        - name: Try to fetch namespaces to check connection
+          kubernetes.core.k8s_info:
+            api_version: v1
+            kind: Namespace
+          register: namespaces
+          no_log: true
+      rescue:
+        - name: Display error message
+          ansible.builtin.fail:
+            msg: "You are not connected into the cluster. Please use the lab instruction to connect on the cluster using user '{{ user }}'"
+
 
     - name: Get the VirtualMachineInstanceMigration resource
       kubernetes.core.k8s_info:
