--- a/admin-configure-environment.yaml
+++ b/admin-configure-environment.yaml
@@ -238,6 +238,13 @@
         mode: '0755'
       ignore_errors: true
 
+    - name: Clone tmux plugins repo to users
+      ansible.builtin.git:
+        repo: https://github.com/tmux-plugins/tpm.git
+        dest: /home/user{{ item | int }}/.tmux/plugins/tpm
+      with_sequence: start=1 end={{ num_users }}
+      ignore_errors: true
+
     - name: Copy configure-tmux-users.sh to all users
       ansible.builtin.shell:
         cmd: '/home/lab-user/configure-tmux-users.sh'
