--- a/admin-configure-environment.yaml
+++ b/admin-configure-environment.yaml
@@ -212,13 +212,13 @@
         cmd: oc label node "{{ nodes_list[item | int  % nodes_list | length - 1 ] }}" user{{ item | int }}="true"
       with_sequence: start=1 end={{ num_users }}
 
-    # - name: New /etc/bashrc file
-    #   ansible.builtin.template:
-    #     src: bashrc-bastion.j2
-    #     dest: "/etc/bashrc"
-    #     mode: '0644'
-    #   become: true
-    #   become_method: sudo
+    - name: New /etc/bashrc file
+      ansible.builtin.template:
+        src: bashrc-bastion.j2
+        dest: "/etc/bashrc"
+        mode: '0644'
+      become: true
+      become_method: sudo
 
     - name: Clone tmux repo to lab-user
       ansible.builtin.git:
